tests/fixtures/errors/postprocess/variants/reject-promise/postprocess.js
export default async () => {
  throw "rejected!";
};
